--- a/scss/main.css
+++ b/scss/main.css
@@ -3789,6 +3789,64 @@ input[type=number] {
   background-color: rgba(24, 96, 31, 0.15);
   color: #18601f;
 }
+.card-ticket {
+  border: 1px solid #d2d2d2;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.card-ticket .info {
+  margin-bottom: 10px;
+}
+.card-ticket .info .subject {
+  font-size: 16px;
+  font-weight: 600;
+  color: #636063;
+  margin-bottom: 5px;
+}
+.card-ticket .info .date {
+  color: #9e9e9e;
+}
+.card-ticket .description p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #3c3c3c;
+}
+.card-ticket.reply {
+  border-color: #18601f;
+  border-right-width: 4px;
+  background-color: rgba(24, 96, 31, 0.1);
+  margin-bottom: 0;
+}
+.card-ticket .satus {
+  margin-top: 10px;
+  font-size: 13px;
+  font-weight: 600;
+  text-align: left;
+}
+.card-ticket .satus span {
+  border-radius: 8px;
+  margin-right: auto;
+  padding: 5px 10px;
+  display: inline-block;
+}
+.card-ticket .satus.waiting span {
+  background-color: rgba(255, 225, 106, 0.3);
+  color: #3c3c3c;
+}
+.card-ticket .satus.success span {
+  background-color: rgba(0, 189, 121, 0.1);
+  color: #00bd79;
+}
+.card-ticket .satus.error span {
+  background-color: rgba(255, 51, 51, 0.1);
+  color: #ff3333;
+}
+.card-ticket .satus.info span {
+  background-color: rgba(0, 156, 242, 0.1);
+  color: #009cf2;
+}
+
 @media (max-width: 1400px) {
   .user-dashboard-section .products-list .card-course .img-container {
     height: 170px;
